--- a/Physio.vcxproj
+++ b/Physio.vcxproj
@@ -172,12 +172,15 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Collision.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MemAlloc.cpp" />
     <ClCompile Include="Vec3.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Box.h" />
     <ClInclude Include="Callbacks.h" />
+    <ClInclude Include="Collision.h" />
     <ClInclude Include="MemAlloc.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Vec3.h" />
