--- a/Physio.vcxproj
+++ b/Physio.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="Callbacks.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="MemAlloc.h" />
+    <ClInclude Include="MemoryTracker.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Vec3.h" />
   </ItemGroup>
