--- a/Physio.vcxproj
+++ b/Physio.vcxproj
@@ -175,12 +175,14 @@
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MemAlloc.cpp" />
+    <ClCompile Include="MemoryTracker.cpp" />
     <ClCompile Include="Vec3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Box.h" />
     <ClInclude Include="Callbacks.h" />
     <ClInclude Include="Collision.h" />
+    <ClInclude Include="HeaderFooter.h" />
     <ClInclude Include="MemAlloc.h" />
     <ClInclude Include="MemoryTracker.h" />
     <ClInclude Include="resource.h" />
